@@ -3,6 +3,10 @@ Changelog
 
 12.5.dev0 - (unreleased)
 ------------------------
+* Change: take into consideration the fact that WidgetFilterBrains might
+  receive a datetime with timezone information attached in which case we 
+  need to get rid of it when comparing to a datetime without a timezone
+  [ichim-david refs #85555]
 
 12.4 - (2017-05-22)
 -------------------
